objects/Document__c.object
<CustomObject>
    <description>This Object is used for NDR Opportunities to show list of attachments that comes from RFQ system</description>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_URL_Update_Status__c</fullName>
        <label>Quote URL Update Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Document</label>
    <nameField>
        <displayFormat>DN-{000000}</displayFormat>
        <label>Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>